fixed the background blur on safari mobile version

--- a/src/components/Header/Navbar.scss
+++ b/src/components/Header/Navbar.scss
@@ -21,6 +21,10 @@
 .navbar .menu-items {
   display: flex;
   padding-right: 3rem;
+   /* ... other styles ... */
+   backdrop-filter: blur(0.625rem); /* Adjusted blur value */
+   -webkit-backdrop-filter: blur(0.625rem); /* Prefix for Safari */
+   /* Consider removing or adjusting the filter in the animation if issues persist */
 }
 
 .navbar .menu-items li {
@@ -169,6 +173,7 @@ a {
     justify-content: space-between;
     align-items: center;
     margin: 1rem;
+    transform: translate3d(0,0,0);
 
     .classicalmenu-logo {
       padding-top: 0.5rem;
